--- a/sass/partials/_checkout-header.scss
+++ b/sass/partials/_checkout-header.scss
@@ -34,6 +34,7 @@
 	position: relative;
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 	margin: 0 auto;
 	width: 100%;
 
@@ -175,6 +176,9 @@
 
 
 .fc-checkout-header .fc-checkout__header-widgets {
+	display: block;
+	width: 100%;
+
 	@media (#{$bp-larger-than-desktop}) {
 		display: flex;
 		justify-content: flex-end;
